<resources>
    <string name="app_name">US</string>
    <string name="welcome_message">Welcome Back</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="empty_login_fields">Sorry! Please Enter data</string>
    <string name="empty_username">Username is empty</string>
    <string name="empty_password">Empty Password</string>
    <string name="username_not_vaild">Username Is not Vaild</string>
    <string name="password_not_vaild">Password is not vaild</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="ok">You are logging</string>
    <string name="attempt_msg">You has blocked from logging 5 minuts</string>
    <string name="user_logging">You are logging</string>
    <string name="user">Email or Phone</string>
    <string name="name">Full Name</string>
    <string name="have_email">Do you have an email ? Login</string>
    <string name="auth_forget">Email or Phone or Username</string>
    <string name="reset_password">Rest Password</string>
    <string name="rest_password">Rest Password</string>
    <string name="new_password">New Password</string>
    <string name="browse">Browse</string>
    <string name="chat">Chat</string>
    <string name="news">News</string>
    <string name="popular">Popular</string>
    <string name="write_comment">Write Comment</string>
    <string name="following">FOLLOWING</string>
    <string name="followers">FOLLOWERS</string>
    <string name="photos">PHOTOS</string>
    <string name="more_data">MORE DATA</string>
    <string name="write_message">Write Message</string>
    <string name="years">Years,</string>
    <string name="message">Message</string>
    <string name="active">Active</string>
    <string name="music">Music</string>
    <string name="comment"> Comment</string>
    <string name="likes"> React</string>
    <string name="k">K</string>
    <string name="m">M</string>
    <string name="recommended">Recommended</string>
    <string name="sd_card">SDCard</string>
    <string name="for_you">For You</string>
    <string name="new_album">New Album</string>
    <string name="hot">New</string>
    <string name="recent_fashion">Recnet Fashion</string>

</resources>
